// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffModal reducer should handle DIFF_MODAL_CREATE 1`] = `
Object {
  "diff": "
--- /etc/issue  2020-04-07 18:01:12.000000000 -0400
+++ /tmp/puppet-file20210218-2326-z6teom  2021-02-18 09:13:48.965177455 -0500
@@ -1,3 +1 @@
-S
-Kernel 
 on an m
-
+fooo
 No newline at end of file
",
  "diffViewType": "split",
  "isOpen": true,
  "title": "log1",
}
`;

exports[`DiffModal reducer should handle DIFF_MODAL_TOGGLE 1`] = `
Object {
  "diff": "",
  "diffViewType": "split",
  "isOpen": true,
  "title": "",
}
`;

exports[`DiffModal reducer should handle DIFF_MODAL_VIEWTYPE 1`] = `
Object {
  "diff": "",
  "diffViewType": "unified",
  "isOpen": false,
  "title": "",
}
`;

exports[`DiffModal reducer should return the initial state 1`] = `
Object {
  "diff": "",
  "diffViewType": "split",
  "isOpen": false,
  "title": "",
}
`;
